Fix z-index bug at toolbar

--- a/src/components/UI/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/UI/Navigation/Toolbar/Toolbar.module.css
@@ -10,5 +10,5 @@
   align-items: center;
   padding: 0 20px;
   box-sizing: border-box;
-  z-index: 1;
+  z-index: 2;
 }
